--- a/prepros.cfg
+++ b/prepros.cfg
@@ -6,9 +6,24 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "Maker Industries",
+      "name": "MakerIndustries",
       "path": "",
       "files": {
+        "380c18fc": {
+          "id": "380c18fc",
+          "path": "TODO.md",
+          "output": "TODO.html",
+          "name": "TODO.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -57,6 +72,22 @@
           "parents": [],
           "type": "css"
         },
+        "0c7b55b5": {
+          "id": "0c7b55b5",
+          "path": "css/style.css",
+          "output": "css/style-dist.css",
+          "name": "style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
         "cd07ef67": {
           "id": "cd07ef67",
           "path": "css/style.scss",
@@ -64,7 +95,7 @@
           "name": "style.scss",
           "category": "CSS",
           "autoCompile": true,
-          "autoprefixer": true,
+          "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
           "nodeSassCompress": true,
@@ -107,6 +138,21 @@
           "parents": [],
           "type": "javascript"
         },
+        "21acb553": {
+          "id": "21acb553",
+          "path": "js/jquery.smooth-scroll.js",
+          "output": "js/jquery.smooth-scroll-dist.js",
+          "name": "jquery.smooth-scroll.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "33d0aaf0": {
           "id": "33d0aaf0",
           "path": "images/brickwall/brickwall.png",
@@ -133,19 +179,6 @@
           "height": 138,
           "width": 220
         },
-        "800feda5": {
-          "id": "800feda5",
-          "path": "images/gallery/laser-cutting.jpg",
-          "output": "images/gallery/laser-cutting.jpg",
-          "name": "laser-cutting.jpg",
-          "category": "IMAGE",
-          "size": 93403,
-          "type": "jpg",
-          "initialSize": 95376,
-          "optimized": true,
-          "height": 665,
-          "width": 1000
-        },
         "9a19beb8": {
           "id": "9a19beb8",
           "path": "images/gallery/defeat-winter.jpg",
@@ -158,6 +191,19 @@
           "optimized": false,
           "height": 403,
           "width": 843
+        },
+        "800feda5": {
+          "id": "800feda5",
+          "path": "images/gallery/laser-cutting.jpg",
+          "output": "images/gallery/laser-cutting.jpg",
+          "name": "laser-cutting.jpg",
+          "category": "IMAGE",
+          "size": 93403,
+          "type": "jpg",
+          "initialSize": 93403,
+          "optimized": false,
+          "height": 665,
+          "width": 1000
         },
         "dc03ad3f": {
           "id": "dc03ad3f",
@@ -180,56 +226,10 @@
           "category": "IMAGE",
           "size": 284413,
           "type": "jpg",
-          "initialSize": 304322,
-          "optimized": true,
+          "initialSize": 284413,
+          "optimized": false,
           "height": 667,
           "width": 1000
-        },
-        "0c7b55b5": {
-          "id": "0c7b55b5",
-          "path": "css/style.css",
-          "output": "css/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "380c18fc": {
-          "id": "380c18fc",
-          "path": "TODO.md",
-          "output": "TODO.html",
-          "name": "TODO.md",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
-        "21acb553": {
-          "id": "21acb553",
-          "path": "js/jquery.smooth-scroll.js",
-          "output": "js/jquery.smooth-scroll-dist.js",
-          "name": "jquery.smooth-scroll.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
         }
       },
       "deploymentHistory": {},
